# sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cheatsheet.txt  create_sandbox_target.cmake  notes.txt  vcpkg.json
a-tour-of-cpp/expect/: main.cpp
a-tour-of-cpp/if-with-initializer/: main.cpp
adl/begin-end/: main.cpp
adl/swap/: main.cpp
algorithms/merge-sort/src/: merge-sort.h
beautiful-c++/function-overloading-conversion-problem/: main.cpp
beautiful-c++/member-initialization-order/: main.cpp
beautiful-c++/structured-bindings/: main.cpp
c++-software-design/acyclic-visitor/: main.cpp
c++-software-design/class-adapter/: main.cpp
c++-software-design/command/: main.cpp
c++-software-design/crtp/: main.cpp
c++-software-design/crtp-mixin-strong-type/: main.cpp
c++-software-design/std-visit-visitor/: main.cpp
c++-software-design/strategy-std-function/: main.cpp
c++-software-design/tagged-pull-observer/: main.cpp
c++-software-design/tagged-pull-observer-std-function/: main.cpp
categories/: a-tour-of-cpp.cmake  adl.cmake  algorithms.cmake  asan.cmake  beautiful-c++.cmake  c++-software-design.cmake  codewars.cmake  deducing-this.cmake  linkedin-learning-functional-programming-in-c++.cmake  object-lifetime.cmake  programming-with-c++20.cmake  random.cmake  type-erasure.cmake  types.cmake
categories/a-tour-of-cpp/expect/: main.cpp
categories/a-tour-of-cpp/if-with-initializer/: main.cpp
categories/algorithms/merge-sort/: MergeSortTests.cpp  main.cpp
categories/asan/sanitize-address/: main.cpp
categories/asan/sanitize-undefined/: main.cpp
categories/beautiful-c++/function-overloading-conversion-problem/: main.cpp
categories/beautiful-c++/member-initialization-order/: main.cpp
categories/beautiful-c++/structured-bindings/: main.cpp
categories/c++-software-design/command/: main.cpp
categories/c++-software-design/object-adapter/: main.cpp
categories/c++-software-design/strategy/: main.cpp
categories/c++-software-design/strategy-std-function/: main.cpp
categories/c++-software-design/tagged-pull-observer/: main.cpp
categories/c++-software-design/tagged-pull-observer-std-function/: main.cpp
categories/codewars/5-kyu-pete-the-baker/: main.cpp
categories/codewars/5-kyu-the-hashtag-generator/: main.cpp
categories/codewars/8-kyu-a-needle-in-the-haystack/: main.cpp
categories/codewars/8-kyu-abbreviate-a-two-word-name/: main.cpp
categories/codewars/8-kyu-beginner-lost-without-a-map/: main.cpp
categories/codewars/8-kyu-beginner-series-2-clock/: main.cpp
categories/codewars/8-kyu-century-from-year/: main.cpp
categories/deducing-this/crtp/: main.cpp
cmake/: create_sandbox_target.cmake  dependencies.cmake
linkedin-learning-functional-programming-in-c++/advanced-compile-time-computation-fibonacci-sequence/: main.cpp
linkedin-learning-functional-programming-in-c++/basic-concept-syntax/: main.cpp
linkedin-learning-functional-programming-in-c++/bind/: main.cpp
linkedin-learning-functional-programming-in-c++/challenge-build-a-functional-pipeline/: main.cpp
linkedin-learning-functional-programming-in-c++/challenge-factorial-continuous-add/: main.cpp
linkedin-learning-functional-programming-in-c++/challenge-function-constrained-by-concepts/: main.cpp
linkedin-learning-functional-programming-in-c++/challenge-implement-a-constexpr-factorial/: main.cpp
linkedin-learning-functional-programming-in-c++/compile-time-matrix-multiplication/: main.cpp
linkedin-learning-functional-programming-in-c++/lazy-evaluation-with-coroutines-infinite-fibonacci-generator/: main.cpp
linkedin-learning-functional-programming-in-c++/recursive-templates/: main.cpp
linkedin-learning-functional-programming-in-c++/using-std-move-only-function-for-higher-order-functions/: main.cpp
patches/: rxcpp-cmake-minimum-3.5.diff  rxcpp-disable-tests-and-examples.diff  rxcpp-rx-notification.hpp.const_rxu_error_ptr.diff
patterns/classic-visitor/: main.cpp
patterns/crtp/: main.cpp
patterns/object-adapter/: main.cpp
patterns/std-visit-visitor/: main.cpp
patterns/strategy/: main.cpp
patterns/strategy-std-function/: main.cpp
programming-with-c++20/abbreviated-function-template/: main.cpp
programming-with-c++20/add/: main.cpp
programming-with-c++20/bitcast/: main.cpp
programming-with-c++20/conditional-call/: main.cpp
programming-with-c++20/coroutines-int-generator/: main.cpp
programming-with-c++20/coroutines-parse-v1/: main.cpp
programming-with-c++20/designated-initializers/: main.cpp
programming-with-c++20/ranges-custom-view/: main.cpp
programming-with-c++20/ranges-introduction/: main.cpp
programming-with-c++20/spaceship-operator/: main.cpp
programming-with-c++20/std-format/: main.cpp
programming-with-c++20/templated-lambdas/: main.cpp
programming-with-c++20/toarray/: main.cpp
random/const-span/: main.cpp
random/fold-expressions/: main.cpp
random/modules-test/: main.cpp
random/structured-bindings/: main.cpp
stuff/const-span/: main.cpp
stuff/fold-expressions/: main.cpp
talks/inheritance-is-the-base-class-of-evil/: main.cpp
types/class-id/: main.cpp
(+52 files in other folders)
